2019-11-18  Richard Biener  <rguenther@suse.de>

PR tree-optimization/92558
	* tree-vect-loop.c (vect_create_epilog_for_reduction): When
	reducting the width of a reduction vector def update new_phis.

	* gcc.dg/vect/pr92558.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@278400 138bc75d-0d04-0410-961f-82ee72b054a4